# ftl-polynoms-calculator

backend/: CMakeLists.txt  README.md  main.cpp
backend/algo/: lexer.h  linked_list.h  normalize.h  polynom.h  term.h
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: api.ts
frontend/src/components/: index.ts
frontend/src/components/ConfigProvider/: ConfigProvider.tsx  context.ts  index.ts
frontend/src/components/Dialog/: Dialog.module.css  Dialog.tsx
frontend/src/components/Operations/: ArithmeticsOperations.tsx  Operations.tsx  OtherOperations.tsx  index.ts  operations.module.css
frontend/src/components/Polynoms/: AddPolynom.tsx  PolynomItem.tsx  Polynoms.module.css  Polynoms.tsx  index.ts
frontend/src/components/Result/: Result.tsx
